terceiro commit sobre css

--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="/assets/sephora.jpg"type"="image/x-icon">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
     <title>Formulário de cadastro</title>
 </head>
 <body>
-    <head>
+      <div id="page">
+         <head>
         <h1>Formulário de cadastro</h1>
     </head>
 
@@ -123,5 +128,6 @@
            <button>Enviar</button>
         </form>
     </main>
+ </div>
 </body>
 </html>
