quarto commit html finalizado

--- a/index.html
+++ b/index.html
@@ -61,48 +61,45 @@
             </div>
 
             <div class="checkbox">
-         <h2>Escolha seus estilos musicais preferidos:</h2>
+         <h2>Qual é a cor que mais combina com você:</h2>
 
                 <div>
-                    <input type="checkbox" id="funk">
-                    <label for="funk">Funk</label>
+                    <input type="checkbox" id="rosa">
+                    <label for="rosa">Rosa</label>
                 </div>
                 <div>
-                    <input type="checkbox" id="sertanejo">
-                    <label for="sertanejo">sertanejo</label>
+                    <input type="checkbox" id="Branco">
+                    <label for="branco">Branco</label>
                 </div>
                 <div>
-                    <input type="checkbox" id="rock">
-                    <label for="rock">rock</label>
+                    <input type="checkbox" id="preto">
+                    <label for="preto">Preto</label>
                 </div>
                 <div>
-                    <input type="checkbox" id="rap">
-                    <label for="rap">rap</label>
+                    <input type="checkbox" id="bege">
+                    <label for="bege">Bege</label>
                 </div>
+                
                 <div>
-                    <input type="checkbox" id="jazz">
-                    <label for="jazz">jazz</label>
-                </div>
-                <div>
-                    <input type="checkbox" id="outros">
-                    <label for="outros">outros</label>
+                    <input type="checkbox" id="outra">
+                    <label for="outra">Outra</label>
                 </div>
             </div>
 
             <div class="radio">
-                <h2>Voce prefere doce salgado ou ambos?</h2>
+                <h2>Oque não pode faltar na sua rotina de beleza?</h2>
 
                 <div>
-                    <input type="radio" id="doce" name="gosto">
-                    <label for="doce">doce</label>
+                    <input type="radio" id="Cuidados com a pele" name="gosto">
+                    <label for="Cuidados com a pele">Cuidados com a pele</label>
                 </div>
                 <div>
-                    <input type="radio" id="salgado" name="gosto">
-                    <label for="salgado">salgado</label>
+                    <input type="radio" id="Cabelo bem arrumado" name="gosto">
+                    <label for="Cabelo bem arrumado">Cabelo bem arrumado</label>
                 </div>
                 <div>
-                    <input type="radio" id="ambos?" name="gosto">
-                    <label for="ambos?">ambos?</label>
+                    <input type="radio" id="Perfume" name="gosto">
+                    <label for="Perfume">Perfume</label>
                 </div>
             </div>
 
@@ -120,7 +117,7 @@
             </div>
 
             <div>
-                <label for="descrição">Faça uma breve descrição sobre voce:</label>
+                <label for="descrição">Fale sobre algo que te faz se sentir bem consigo mesmo:</label>
                 <textarea name="descrição" id="descrição" cols="30" rows="10" placeholder="Digite aqui..."></textarea>
             </div>
            </fieldset>
