--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
                     <label for="Cabelo bem arrumado">Cabelo bem arrumado</label>
                 </div>
                 <div>
-                    <input type="radio" id="Perfume" name="gosto">
-                    <label for="Perfume">Perfume</label>
+                    <input type="radio" id="Maquiagem" name="gosto">
+                    <label for="Maquiagem">Maquiagem</label>
                 </div>
             </div>
 
